--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,14 @@ authors = ["Adarah <lucasyharada@gmail.com>"]
 python = "^3.8"
 loguru = "^0.4.1"
 attr = "^0.3.1"
+numpy = "^1.18.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
 isort = "^4.3.21"
 black = "^19.10b0"
 pytest = "^5.4.1"
+ptvsd = "^4.3.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
