--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ isort = "^4.3.21"
 black = "^19.10b0"
 pytest = "^5.4.1"
 ptvsd = "^4.3.2"
+pytest-mock = "^3.1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
