--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ python = "^3.8"
 loguru = "^0.4.1"
 attr = "^0.3.1"
 numpy = "^1.18.3"
+pyparsing = "^2.4.7"
+attrs = "^19.3.0"
+hypothesis-pytest = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.7.9"
